--- a/training.html
+++ b/training.html
@@ -11,7 +11,7 @@
     <nav>
       <h1>Hot Beans</h1>
       <ul>
-        <li><a href="home.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="job.html">Job Specification</a></li>
         <li><a href="training.html">Training Courses</a></li>
         <li><a href="contact.html">Contact</a></li>
